# async_scope

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  async-resource.html  async-resource.md  asyncscope.html  asyncscope.md  conanfile.py  remove-detached.md
.github/workflows/: _test_common.sh  ci.yml  gh-pages.yml  test-clang-format.sh  test-sanitizer.sh
examples/: scope.cpp
include/: async_scope.hpp
slides/: fonts.css  mermaid.js  remove-detached.html
test/: test_dtor.cpp  test_on_empty.cpp  test_spawn.cpp  test_spawn_future.cpp  test_stop.cpp
test/test_common/: receivers.hpp  schedulers.hpp  type_helpers.hpp
